# staked_vote

./: Anchor.toml  README.md  package-lock.json  package.json
app/: .env.template  README.md  package.json  postcss.config.js  tailwind.config.js
app/anchor/idl/: programId.ts
app/anchor/idl/accounts/: Choice.ts  Vote.ts  index.ts
app/anchor/idl/instructions/: index.ts  initializeVoting.ts  payOutWinner.ts  pickWinner.ts  voteCandidate.ts
app/components/: Auth.tsx  Home.tsx  Layout.tsx  Voting.tsx  WalletInfo.tsx
app/components/Voting/: Voting.tsx
app/components/buttons/: Button.tsx
app/pages/: _app.tsx  index.tsx
app/styles/: globals.css
programs/staked_voting/: Cargo.toml
programs/staked_voting/src/: lib.rs
tests/: staked_voting.ts
